# HP-Backend

./: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  nginx.conf.example  pyproject.toml  requirements.txt  startup.sh
api/v1/: __init__.py  authentication.py  business.py  business_verification.py  location.py  urls.py  users.py
app/application/authentication/: ports.py  rules.py
app/application/business_verification/: ports.py  rules.py
app/application/location/: ports.py  rules.py
app/application/users/: ports.py  rules.py
app/core/: celery.py  events.py  exceptions.py
app/domain/business_verification/: entities.py  enums.py
app/domain/location/: entities.py  enums.py
app/domain/users/: entities.py  enums.py
app/infrastructure/: business_verification_service.py  cache_service.py  email_service.py  event_handlers.py  event_publisher.py  jwt_service.py  location_service.py  password_service.py  social_auth_service.py
app/infrastructure/authentication/: events.py  middleware.py  repositories.py
app/infrastructure/business_verification/: events.py  repositories.py
app/infrastructure/location/: events.py
app/infrastructure/users/: events.py  managers.py  pipeline.py  repositories.py
app/presentation/: apps.py  factory.py  responses.py
app/presentation/serializers/: authentication.py  business_verification.py  location.py  users.py
app/presentation/templates/: business_verification_failure.html  business_verification_success.html
app/presentation/views/: authentication.py  business_verification.py  location.py  users.py
apps/authentication/: apps.py
apps/authentication/application/: ports.py  rules.py
apps/authentication/domain/: events.py  models.py  ports.py
apps/authentication/infrastructure/: event_handlers.py  factory.py  managers.py  middleware.py  models.py  pipelines.py  repositories.py  services.py
apps/authentication/models/: __init__.py
apps/authentication/presentation/: serializers.py  views.py
apps/authentication/serializers/: __init__.py  authentication.py
apps/authentication/views/: authentication.py
apps/business_verification/: apps.py
apps/business_verification/application/: ports.py  rules.py
apps/business_verification/domain/: events.py  models.py
apps/users/: apps.py
business/: admin.py  models.py  repositories.py  serializers.py  services.py  views.py
config/: __init__.py  settings.py  urls.py
config/settings/: __init__.py  base.py  development.py  production.py  test.py
core/: celery.py  container.py  enums.py  exceptions.py  interfaces.py  logging.py  services.py
core/application/: event_bus.py  ports.py
core/exceptions/: base.py  handler.py
core/infrastructure/: celery.py  factory.py  services.py
core/logging/: base.py
core/tasks/: __init__.py  base.py  caching.py  email.py  users.py
docs/: PROPERTY_LISTING_DESIGN.md  README.md  authentication.md  business_verification.md
location/: admin.py  models.py  serializers.py  services.py  utils.py  views.py
monitoring/: admin.py  models.py  tasks.py
templates/: business_verification_failure.html  business_verification_success.html  verify_email.html
tests/integration/: test_business_verification_flow.py  test_user_registration_flow.py
tests/performance/: test_repository_performance.py
tests/security/: test_authentication_security.py
users/: admin.py  managers.py  middleware.py  models.py  pipeline.py  repositories.py  serializers.py  services.py  views.py
(+45 files in other folders)
